// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageSend has the expected html structure 1`] = `
<div
  class="tm-page"
>
  <header
    class="tm-page-header"
  >
    <div
      class="tm-page-header-container"
    >
      <div
        class="tm-page-header-text"
      >
        <div
          class="tm-page-header-title"
        >
          <h2>
            Send
          </h2>
        </div>
        <div
          class="tm-page-header-subtitle"
        >
          <h3>
            
          </h3>
        </div>
      </div>
      <menu
        class="tm-page-header-menu"
      >
        <div>
          <div>
            <div
              class="tm-tool-bar"
            >
              <div
                class="tm-tool-bar-container"
              >
                <div
                  class="main"
                >
                  <a
                    class="back"
                  >
                    <i
                      class="material-icons"
                    >
                      arrow_back
                    </i>
                  </a>
                  <a
                    class="help"
                  >
                    <i
                      class="material-icons"
                    >
                      help_outline
                    </i>
                  </a>
                  <a
                    class="sign-out"
                  >
                    <i
                      class="material-icons"
                    >
                      exit_to_app
                    </i>
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
      </menu>
    </div>
  </header>
  <main
    class="tm-page-main ps"
  >
    <form
      class="tm-form"
    >
      <div
        class="tm-form-container"
      >
        <!---->
        <main
          class="tm-form-main"
        >
          <section
            class="tm-part"
          >
            <div
              class="tm-part-container"
            >
              <header
                class="tm-part-header"
              >
                <div
                  class="tm-part-header-container"
                >
                  <div
                    class="tm-part-title h5"
                  >
                    Denomination Options
                  </div>
                  <menu
                    class="tm-part-menu"
                  />
                </div>
              </header>
              <main
                class="tm-part-main"
              >
                <div
                  class="tm-form-group"
                >
                  <!---->
                  <label
                    class="tm-form-group__label"
                    for="send-denomination"
                  >
                    Denomination
                  </label>
                  <div
                    class="tm-form-group__field"
                  >
                    <div
                      class="tm-select"
                      id="send-denomination"
                    >
                      <select
                        class="tm-field tm-field-select"
                      >
                        <option
                          disabled="disabled"
                          hidden="hidden"
                          selected="selected"
                          value=""
                        >
                          Select token...
                        </option>
                        <option
                          value="mycoin"
                        >
                          MYCOIN
                        </option>
                        <option
                          value="fermion"
                        >
                          FERMION
                        </option>
                      </select>
                      <div
                        class="tm-field-select-addon"
                      >
                        <i
                          class="material-icons"
                        >
                          arrow_drop_down
                        </i>
                      </div>
                    </div>
                    <!---->
                  </div>
                </div>
              </main>
            </div>
          </section>
          <section
            class="tm-part"
          >
            <div
              class="tm-part-container"
            >
              <header
                class="tm-part-header"
              >
                <div
                  class="tm-part-header-container"
                >
                  <div
                    class="tm-part-title h5"
                  >
                    Transaction Details
                  </div>
                  <menu
                    class="tm-part-menu"
                  />
                </div>
              </header>
              <main
                class="tm-part-main"
              >
                <div
                  class="tm-form-group"
                >
                  <!---->
                  <label
                    class="tm-form-group__label"
                    for="send-zone-id"
                  >
                    Zone ID
                  </label>
                  <div
                    class="tm-form-group__field"
                  >
                    <div
                      class="tm-select"
                      id="send-zone-id"
                    >
                      <select
                        class="tm-field tm-field-select"
                      >
                        <option
                          disabled="disabled"
                          hidden="hidden"
                          selected="selected"
                          value=""
                        >
                          Select zone...
                        </option>
                        <option
                          value="basecoind-demo1"
                        >
                          basecoind-demo1
                        </option>
                        <option
                          value="basecoind-demo2"
                        >
                          basecoind-demo2
                        </option>
                      </select>
                      <div
                        class="tm-field-select-addon"
                      >
                        <i
                          class="material-icons"
                        >
                          arrow_drop_down
                        </i>
                      </div>
                    </div>
                    <!---->
                  </div>
                </div>
                <div
                  class="tm-form-group"
                >
                  <!---->
                  <label
                    class="tm-form-group__label"
                    for="send-address"
                  >
                    Send To
                  </label>
                  <div
                    class="tm-form-group__field"
                  >
                    <div
                      class="tm-field-group"
                    >
                      <input
                        class="tm-field"
                        id="send-address"
                        placeholder="Address"
                        type="text"
                      />
                    </div>
                    <div
                      class="tm-form-msg sm tm-form-msg--error"
                    >
                      Address is required
                    </div>
                  </div>
                </div>
                <div
                  class="tm-form-group"
                >
                  <!---->
                  <label
                    class="tm-form-group__label"
                    for="send-amount"
                  >
                    Amount
                  </label>
                  <div
                    class="tm-form-group__field"
                  >
                    <div
                      class="tm-field-group"
                    >
                      <input
                        class="tm-field"
                        id="send-amount"
                        placeholder="Amount"
                        type="number"
                      />
                    </div>
                    <div
                      class="tm-form-msg sm tm-form-msg--error"
                    >
                      Amount is required
                    </div>
                    <!---->
                  </div>
                </div>
                <!---->
                <!---->
              </main>
            </div>
          </section>
        </main>
        <footer
          class="tm-form-footer"
        >
          <div>
            <div />
            <button
              class="tm-btn"
            >
              <span
                class="tm-btn__container tm-btn--primary"
              >
                <!---->
                <!---->
                <span
                  class="tm-btn__value"
                >
                  Send Tokens
                </span>
              </span>
            </button>
          </div>
        </footer>
      </div>
    </form>
    <!---->
    <div
      class="ps__rail-x"
      style="left: 0px; top: 0px;"
    >
      <div
        class="ps__thumb-x"
        style="left: 0px; width: 0px;"
        tabindex="0"
      />
    </div>
    <div
      class="ps__rail-y"
      style="top: 0px; left: 0px;"
    >
      <div
        class="ps__thumb-y"
        style="top: 0px; height: 0px;"
        tabindex="0"
      />
    </div>
  </main>
</div>
`;

exports[`PageSend should show address required error 1`] = `
<div
  class="tm-page"
>
  <header
    class="tm-page-header"
  >
    <div
      class="tm-page-header-container"
    >
      <div
        class="tm-page-header-text"
      >
        <div
          class="tm-page-header-title"
        >
          <h2>
            Send
          </h2>
        </div>
        <div
          class="tm-page-header-subtitle"
        >
          <h3>
            
          </h3>
        </div>
      </div>
      <menu
        class="tm-page-header-menu"
      >
        <div>
          <div>
            <div
              class="tm-tool-bar"
            >
              <div
                class="tm-tool-bar-container"
              >
                <div
                  class="main"
                >
                  <a
                    class="back"
                  >
                    <i
                      class="material-icons"
                    >
                      arrow_back
                    </i>
                  </a>
                  <a
                    class="help"
                  >
                    <i
                      class="material-icons"
                    >
                      help_outline
                    </i>
                  </a>
                  <a
                    class="sign-out"
                  >
                    <i
                      class="material-icons"
                    >
                      exit_to_app
                    </i>
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
      </menu>
    </div>
  </header>
  <main
    class="tm-page-main"
  >
    <form
      class="tm-form"
    >
      <div
        class="tm-form-container"
      >
        <!---->
        <main
          class="tm-form-main"
        >
          <section
            class="tm-part"
          >
            <div
              class="tm-part-container"
            >
              <header
                class="tm-part-header"
              >
                <div
                  class="tm-part-header-container"
                >
                  <div
                    class="tm-part-title h5"
                  >
                    Denomination Options
                  </div>
                  <menu
                    class="tm-part-menu"
                  />
                </div>
              </header>
              <main
                class="tm-part-main"
              >
                <div
                  class="tm-form-group"
                >
                  <!---->
                  <label
                    class="tm-form-group__label"
                    for="send-denomination"
                  >
                    Denomination
                  </label>
                  <div
                    class="tm-form-group__field"
                  >
                    <div
                      class="tm-select"
                      id="send-denomination"
                    >
                      <select
                        class="tm-field tm-field-select"
                      >
                        <option
                          disabled="disabled"
                          hidden="hidden"
                          selected="selected"
                          value=""
                        >
                          Select token...
                        </option>
                      </select>
                      <div
                        class="tm-field-select-addon"
                      >
                        <i
                          class="material-icons"
                        >
                          arrow_drop_down
                        </i>
                      </div>
                    </div>
                    <!---->
                  </div>
                </div>
              </main>
            </div>
          </section>
          <section
            class="tm-part"
          >
            <div
              class="tm-part-container"
            >
              <header
                class="tm-part-header"
              >
                <div
                  class="tm-part-header-container"
                >
                  <div
                    class="tm-part-title h5"
                  >
                    Transaction Details
                  </div>
                  <menu
                    class="tm-part-menu"
                  />
                </div>
              </header>
              <main
                class="tm-part-main"
              >
                <div
                  class="tm-form-group"
                >
                  <!---->
                  <label
                    class="tm-form-group__label"
                    for="send-zone-id"
                  >
                    Zone ID
                  </label>
                  <div
                    class="tm-form-group__field"
                  >
                    <div
                      class="tm-select"
                      id="send-zone-id"
                    >
                      <select
                        class="tm-field tm-field-select"
                      >
                        <option
                          disabled="disabled"
                          hidden="hidden"
                          selected="selected"
                          value=""
                        >
                          Select zone...
                        </option>
                        <option
                          value="basecoind-demo1"
                        >
                          basecoind-demo1
                        </option>
                        <option
                          value="basecoind-demo2"
                        >
                          basecoind-demo2
                        </option>
                      </select>
                      <div
                        class="tm-field-select-addon"
                      >
                        <i
                          class="material-icons"
                        >
                          arrow_drop_down
                        </i>
                      </div>
                    </div>
                    <!---->
                  </div>
                </div>
                <div
                  class="tm-form-group tm-form-group--error"
                >
                  <!---->
                  <label
                    class="tm-form-group__label"
                    for="send-address"
                  >
                    Send To
                  </label>
                  <div
                    class="tm-form-group__field"
                  >
                    <div
                      class="tm-field-group"
                    >
                      <input
                        class="tm-field"
                        id="send-address"
                        placeholder="Address"
                        type="text"
                      />
                    </div>
                    <div
                      class="tm-form-msg sm tm-form-msg--error"
                    >
                      Address is required
                    </div>
                  </div>
                </div>
                <div
                  class="tm-form-group tm-form-group--error"
                >
                  <!---->
                  <label
                    class="tm-form-group__label"
                    for="send-amount"
                  >
                    Amount
                  </label>
                  <div
                    class="tm-form-group__field"
                  >
                    <div
                      class="tm-field-group"
                    >
                      <input
                        class="tm-field"
                        id="send-amount"
                        placeholder="Amount"
                        type="number"
                      />
                    </div>
                    <!---->
                    <div
                      class="tm-form-msg sm tm-form-msg--error"
                    >
                      Amount must be between 0 and 0
                    </div>
                  </div>
                </div>
                <!---->
                <!---->
              </main>
            </div>
          </section>
        </main>
        <footer
          class="tm-form-footer"
        >
          <div>
            <div />
            <button
              class="tm-btn"
            >
              <span
                class="tm-btn__container tm-btn--primary"
              >
                <!---->
                <!---->
                <span
                  class="tm-btn__value"
                >
                  Send Tokens
                </span>
              </span>
            </button>
          </div>
        </footer>
      </div>
    </form>
    <!---->
  </main>
</div>
`;

exports[`PageSend should show bech32 error when address length is too long 1`] = `
<div
  class="tm-page"
>
  <header
    class="tm-page-header"
  >
    <div
      class="tm-page-header-container"
    >
      <div
        class="tm-page-header-text"
      >
        <div
          class="tm-page-header-title"
        >
          <h2>
            Send
          </h2>
        </div>
        <div
          class="tm-page-header-subtitle"
        >
          <h3>
            
          </h3>
        </div>
      </div>
      <menu
        class="tm-page-header-menu"
      >
        <div>
          <div>
            <div
              class="tm-tool-bar"
            >
              <div
                class="tm-tool-bar-container"
              >
                <div
                  class="main"
                >
                  <a
                    class="back"
                  >
                    <i
                      class="material-icons"
                    >
                      arrow_back
                    </i>
                  </a>
                  <a
                    class="help"
                  >
                    <i
                      class="material-icons"
                    >
                      help_outline
                    </i>
                  </a>
                  <a
                    class="sign-out"
                  >
                    <i
                      class="material-icons"
                    >
                      exit_to_app
                    </i>
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
      </menu>
    </div>
  </header>
  <main
    class="tm-page-main"
  >
    <form
      class="tm-form"
    >
      <div
        class="tm-form-container"
      >
        <!---->
        <main
          class="tm-form-main"
        >
          <section
            class="tm-part"
          >
            <div
              class="tm-part-container"
            >
              <header
                class="tm-part-header"
              >
                <div
                  class="tm-part-header-container"
                >
                  <div
                    class="tm-part-title h5"
                  >
                    Denomination Options
                  </div>
                  <menu
                    class="tm-part-menu"
                  />
                </div>
              </header>
              <main
                class="tm-part-main"
              >
                <div
                  class="tm-form-group"
                >
                  <!---->
                  <label
                    class="tm-form-group__label"
                    for="send-denomination"
                  >
                    Denomination
                  </label>
                  <div
                    class="tm-form-group__field"
                  >
                    <div
                      class="tm-select"
                      id="send-denomination"
                    >
                      <select
                        class="tm-field tm-field-select"
                      >
                        <option
                          disabled="disabled"
                          hidden="hidden"
                          selected="selected"
                          value=""
                        >
                          Select token...
                        </option>
                      </select>
                      <div
                        class="tm-field-select-addon"
                      >
                        <i
                          class="material-icons"
                        >
                          arrow_drop_down
                        </i>
                      </div>
                    </div>
                    <!---->
                  </div>
                </div>
              </main>
            </div>
          </section>
          <section
            class="tm-part"
          >
            <div
              class="tm-part-container"
            >
              <header
                class="tm-part-header"
              >
                <div
                  class="tm-part-header-container"
                >
                  <div
                    class="tm-part-title h5"
                  >
                    Transaction Details
                  </div>
                  <menu
                    class="tm-part-menu"
                  />
                </div>
              </header>
              <main
                class="tm-part-main"
              >
                <div
                  class="tm-form-group"
                >
                  <!---->
                  <label
                    class="tm-form-group__label"
                    for="send-zone-id"
                  >
                    Zone ID
                  </label>
                  <div
                    class="tm-form-group__field"
                  >
                    <div
                      class="tm-select"
                      id="send-zone-id"
                    >
                      <select
                        class="tm-field tm-field-select"
                      >
                        <option
                          disabled="disabled"
                          hidden="hidden"
                          selected="selected"
                          value=""
                        >
                          Select zone...
                        </option>
                        <option
                          value="basecoind-demo1"
                        >
                          basecoind-demo1
                        </option>
                        <option
                          value="basecoind-demo2"
                        >
                          basecoind-demo2
                        </option>
                      </select>
                      <div
                        class="tm-field-select-addon"
                      >
                        <i
                          class="material-icons"
                        >
                          arrow_drop_down
                        </i>
                      </div>
                    </div>
                    <!---->
                  </div>
                </div>
                <div
                  class="tm-form-group tm-form-group--error"
                >
                  <!---->
                  <label
                    class="tm-form-group__label"
                    for="send-address"
                  >
                    Send To
                  </label>
                  <div
                    class="tm-form-group__field"
                  >
                    <div
                      class="tm-field-group"
                    >
                      <input
                        class="tm-field"
                        id="send-address"
                        placeholder="Address"
                        type="text"
                      />
                    </div>
                    <div
                      class="tm-form-msg sm tm-form-msg--error"
                    >
                      Address is invalid (No separator character for asdfasdfasdfasdfasdfasdfasdfasdfasdfasdfasdf)
                    </div>
                  </div>
                </div>
                <div
                  class="tm-form-group tm-form-group--error"
                >
                  <!---->
                  <label
                    class="tm-form-group__label"
                    for="send-amount"
                  >
                    Amount
                  </label>
                  <div
                    class="tm-form-group__field"
                  >
                    <div
                      class="tm-field-group"
                    >
                      <input
                        class="tm-field"
                        id="send-amount"
                        placeholder="Amount"
                        type="number"
                      />
                    </div>
                    <!---->
                    <div
                      class="tm-form-msg sm tm-form-msg--error"
                    >
                      Amount must be between 0 and 0
                    </div>
                  </div>
                </div>
                <!---->
                <!---->
              </main>
            </div>
          </section>
        </main>
        <footer
          class="tm-form-footer"
        >
          <div>
            <div />
            <button
              class="tm-btn"
            >
              <span
                class="tm-btn__container tm-btn--primary"
              >
                <!---->
                <!---->
                <span
                  class="tm-btn__value"
                >
                  Send Tokens
                </span>
              </span>
            </button>
          </div>
        </footer>
      </div>
    </form>
    <!---->
  </main>
</div>
`;

exports[`PageSend should show bech32 error when address length is too short 1`] = `
<div
  class="tm-page"
>
  <header
    class="tm-page-header"
  >
    <div
      class="tm-page-header-container"
    >
      <div
        class="tm-page-header-text"
      >
        <div
          class="tm-page-header-title"
        >
          <h2>
            Send
          </h2>
        </div>
        <div
          class="tm-page-header-subtitle"
        >
          <h3>
            
          </h3>
        </div>
      </div>
      <menu
        class="tm-page-header-menu"
      >
        <div>
          <div>
            <div
              class="tm-tool-bar"
            >
              <div
                class="tm-tool-bar-container"
              >
                <div
                  class="main"
                >
                  <a
                    class="back"
                  >
                    <i
                      class="material-icons"
                    >
                      arrow_back
                    </i>
                  </a>
                  <a
                    class="help"
                  >
                    <i
                      class="material-icons"
                    >
                      help_outline
                    </i>
                  </a>
                  <a
                    class="sign-out"
                  >
                    <i
                      class="material-icons"
                    >
                      exit_to_app
                    </i>
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
      </menu>
    </div>
  </header>
  <main
    class="tm-page-main"
  >
    <form
      class="tm-form"
    >
      <div
        class="tm-form-container"
      >
        <!---->
        <main
          class="tm-form-main"
        >
          <section
            class="tm-part"
          >
            <div
              class="tm-part-container"
            >
              <header
                class="tm-part-header"
              >
                <div
                  class="tm-part-header-container"
                >
                  <div
                    class="tm-part-title h5"
                  >
                    Denomination Options
                  </div>
                  <menu
                    class="tm-part-menu"
                  />
                </div>
              </header>
              <main
                class="tm-part-main"
              >
                <div
                  class="tm-form-group"
                >
                  <!---->
                  <label
                    class="tm-form-group__label"
                    for="send-denomination"
                  >
                    Denomination
                  </label>
                  <div
                    class="tm-form-group__field"
                  >
                    <div
                      class="tm-select"
                      id="send-denomination"
                    >
                      <select
                        class="tm-field tm-field-select"
                      >
                        <option
                          disabled="disabled"
                          hidden="hidden"
                          selected="selected"
                          value=""
                        >
                          Select token...
                        </option>
                      </select>
                      <div
                        class="tm-field-select-addon"
                      >
                        <i
                          class="material-icons"
                        >
                          arrow_drop_down
                        </i>
                      </div>
                    </div>
                    <!---->
                  </div>
                </div>
              </main>
            </div>
          </section>
          <section
            class="tm-part"
          >
            <div
              class="tm-part-container"
            >
              <header
                class="tm-part-header"
              >
                <div
                  class="tm-part-header-container"
                >
                  <div
                    class="tm-part-title h5"
                  >
                    Transaction Details
                  </div>
                  <menu
                    class="tm-part-menu"
                  />
                </div>
              </header>
              <main
                class="tm-part-main"
              >
                <div
                  class="tm-form-group"
                >
                  <!---->
                  <label
                    class="tm-form-group__label"
                    for="send-zone-id"
                  >
                    Zone ID
                  </label>
                  <div
                    class="tm-form-group__field"
                  >
                    <div
                      class="tm-select"
                      id="send-zone-id"
                    >
                      <select
                        class="tm-field tm-field-select"
                      >
                        <option
                          disabled="disabled"
                          hidden="hidden"
                          selected="selected"
                          value=""
                        >
                          Select zone...
                        </option>
                        <option
                          value="basecoind-demo1"
                        >
                          basecoind-demo1
                        </option>
                        <option
                          value="basecoind-demo2"
                        >
                          basecoind-demo2
                        </option>
                      </select>
                      <div
                        class="tm-field-select-addon"
                      >
                        <i
                          class="material-icons"
                        >
                          arrow_drop_down
                        </i>
                      </div>
                    </div>
                    <!---->
                  </div>
                </div>
                <div
                  class="tm-form-group tm-form-group--error"
                >
                  <!---->
                  <label
                    class="tm-form-group__label"
                    for="send-address"
                  >
                    Send To
                  </label>
                  <div
                    class="tm-form-group__field"
                  >
                    <div
                      class="tm-field-group"
                    >
                      <input
                        class="tm-field"
                        id="send-address"
                        placeholder="Address"
                        type="text"
                      />
                    </div>
                    <div
                      class="tm-form-msg sm tm-form-msg--error"
                    >
                      Address is invalid (asdf too short)
                    </div>
                  </div>
                </div>
                <div
                  class="tm-form-group tm-form-group--error"
                >
                  <!---->
                  <label
                    class="tm-form-group__label"
                    for="send-amount"
                  >
                    Amount
                  </label>
                  <div
                    class="tm-form-group__field"
                  >
                    <div
                      class="tm-field-group"
                    >
                      <input
                        class="tm-field"
                        id="send-amount"
                        placeholder="Amount"
                        type="number"
                      />
                    </div>
                    <!---->
                    <div
                      class="tm-form-msg sm tm-form-msg--error"
                    >
                      Amount must be between 0 and 0
                    </div>
                  </div>
                </div>
                <!---->
                <!---->
              </main>
            </div>
          </section>
        </main>
        <footer
          class="tm-form-footer"
        >
          <div>
            <div />
            <button
              class="tm-btn"
            >
              <span
                class="tm-btn__container tm-btn--primary"
              >
                <!---->
                <!---->
                <span
                  class="tm-btn__value"
                >
                  Send Tokens
                </span>
              </span>
            </button>
          </div>
        </footer>
      </div>
    </form>
    <!---->
  </main>
</div>
`;

exports[`PageSend should show bech32 error when alphanumeric is wrong 1`] = `
<div
  class="tm-page"
>
  <header
    class="tm-page-header"
  >
    <div
      class="tm-page-header-container"
    >
      <div
        class="tm-page-header-text"
      >
        <div
          class="tm-page-header-title"
        >
          <h2>
            Send
          </h2>
        </div>
        <div
          class="tm-page-header-subtitle"
        >
          <h3>
            
          </h3>
        </div>
      </div>
      <menu
        class="tm-page-header-menu"
      >
        <div>
          <div>
            <div
              class="tm-tool-bar"
            >
              <div
                class="tm-tool-bar-container"
              >
                <div
                  class="main"
                >
                  <a
                    class="back"
                  >
                    <i
                      class="material-icons"
                    >
                      arrow_back
                    </i>
                  </a>
                  <a
                    class="help"
                  >
                    <i
                      class="material-icons"
                    >
                      help_outline
                    </i>
                  </a>
                  <a
                    class="sign-out"
                  >
                    <i
                      class="material-icons"
                    >
                      exit_to_app
                    </i>
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
      </menu>
    </div>
  </header>
  <main
    class="tm-page-main"
  >
    <form
      class="tm-form"
    >
      <div
        class="tm-form-container"
      >
        <!---->
        <main
          class="tm-form-main"
        >
          <section
            class="tm-part"
          >
            <div
              class="tm-part-container"
            >
              <header
                class="tm-part-header"
              >
                <div
                  class="tm-part-header-container"
                >
                  <div
                    class="tm-part-title h5"
                  >
                    Denomination Options
                  </div>
                  <menu
                    class="tm-part-menu"
                  />
                </div>
              </header>
              <main
                class="tm-part-main"
              >
                <div
                  class="tm-form-group"
                >
                  <!---->
                  <label
                    class="tm-form-group__label"
                    for="send-denomination"
                  >
                    Denomination
                  </label>
                  <div
                    class="tm-form-group__field"
                  >
                    <div
                      class="tm-select"
                      id="send-denomination"
                    >
                      <select
                        class="tm-field tm-field-select"
                      >
                        <option
                          disabled="disabled"
                          hidden="hidden"
                          selected="selected"
                          value=""
                        >
                          Select token...
                        </option>
                      </select>
                      <div
                        class="tm-field-select-addon"
                      >
                        <i
                          class="material-icons"
                        >
                          arrow_drop_down
                        </i>
                      </div>
                    </div>
                    <!---->
                  </div>
                </div>
              </main>
            </div>
          </section>
          <section
            class="tm-part"
          >
            <div
              class="tm-part-container"
            >
              <header
                class="tm-part-header"
              >
                <div
                  class="tm-part-header-container"
                >
                  <div
                    class="tm-part-title h5"
                  >
                    Transaction Details
                  </div>
                  <menu
                    class="tm-part-menu"
                  />
                </div>
              </header>
              <main
                class="tm-part-main"
              >
                <div
                  class="tm-form-group"
                >
                  <!---->
                  <label
                    class="tm-form-group__label"
                    for="send-zone-id"
                  >
                    Zone ID
                  </label>
                  <div
                    class="tm-form-group__field"
                  >
                    <div
                      class="tm-select"
                      id="send-zone-id"
                    >
                      <select
                        class="tm-field tm-field-select"
                      >
                        <option
                          disabled="disabled"
                          hidden="hidden"
                          selected="selected"
                          value=""
                        >
                          Select zone...
                        </option>
                        <option
                          value="basecoind-demo1"
                        >
                          basecoind-demo1
                        </option>
                        <option
                          value="basecoind-demo2"
                        >
                          basecoind-demo2
                        </option>
                      </select>
                      <div
                        class="tm-field-select-addon"
                      >
                        <i
                          class="material-icons"
                        >
                          arrow_drop_down
                        </i>
                      </div>
                    </div>
                    <!---->
                  </div>
                </div>
                <div
                  class="tm-form-group tm-form-group--error"
                >
                  <!---->
                  <label
                    class="tm-form-group__label"
                    for="send-address"
                  >
                    Send To
                  </label>
                  <div
                    class="tm-form-group__field"
                  >
                    <div
                      class="tm-field-group"
                    >
                      <input
                        class="tm-field"
                        id="send-address"
                        placeholder="Address"
                        type="text"
                      />
                    </div>
                    <div
                      class="tm-form-msg sm tm-form-msg--error"
                    >
                      Address is invalid (No separator character for !@#$!@#$!@#$!@#$!@#$!@#$!@#$!@#$!@#$!@#$)
                    </div>
                  </div>
                </div>
                <div
                  class="tm-form-group tm-form-group--error"
                >
                  <!---->
                  <label
                    class="tm-form-group__label"
                    for="send-amount"
                  >
                    Amount
                  </label>
                  <div
                    class="tm-form-group__field"
                  >
                    <div
                      class="tm-field-group"
                    >
                      <input
                        class="tm-field"
                        id="send-amount"
                        placeholder="Amount"
                        type="number"
                      />
                    </div>
                    <!---->
                    <div
                      class="tm-form-msg sm tm-form-msg--error"
                    >
                      Amount must be between 0 and 0
                    </div>
                  </div>
                </div>
                <!---->
                <!---->
              </main>
            </div>
          </section>
        </main>
        <footer
          class="tm-form-footer"
        >
          <div>
            <div />
            <button
              class="tm-btn"
            >
              <span
                class="tm-btn__container tm-btn--primary"
              >
                <!---->
                <!---->
                <span
                  class="tm-btn__value"
                >
                  Send Tokens
                </span>
              </span>
            </button>
          </div>
        </footer>
      </div>
    </form>
    <!---->
  </main>
</div>
`;

exports[`PageSend should show notification for unsuccessful send 1`] = `
Object {
  "body": "An error occurred while trying to send: \\"Cannot read property 'amount' of undefined\\"",
  "icon": "error",
  "layout": "alert",
  "time": 1608,
  "title": "Error Sending",
  "type": "error",
}
`;

exports[`PageSend should trigger confirmation modal if form is corect 1`] = `
<div
  class="tm-page"
>
  <header
    class="tm-page-header"
  >
    <div
      class="tm-page-header-container"
    >
      <div
        class="tm-page-header-text"
      >
        <div
          class="tm-page-header-title"
        >
          <h2>
            Send
          </h2>
        </div>
        <div
          class="tm-page-header-subtitle"
        >
          <h3>
            
          </h3>
        </div>
      </div>
      <menu
        class="tm-page-header-menu"
      >
        <div>
          <div>
            <div
              class="tm-tool-bar"
            >
              <div
                class="tm-tool-bar-container"
              >
                <div
                  class="main"
                >
                  <a
                    class="back"
                  >
                    <i
                      class="material-icons"
                    >
                      arrow_back
                    </i>
                  </a>
                  <a
                    class="help"
                  >
                    <i
                      class="material-icons"
                    >
                      help_outline
                    </i>
                  </a>
                  <a
                    class="sign-out"
                  >
                    <i
                      class="material-icons"
                    >
                      exit_to_app
                    </i>
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
      </menu>
    </div>
  </header>
  <main
    class="tm-page-main"
  >
    <form
      class="tm-form"
    >
      <div
        class="tm-form-container"
      >
        <!---->
        <main
          class="tm-form-main"
        >
          <section
            class="tm-part"
          >
            <div
              class="tm-part-container"
            >
              <header
                class="tm-part-header"
              >
                <div
                  class="tm-part-header-container"
                >
                  <div
                    class="tm-part-title h5"
                  >
                    Denomination Options
                  </div>
                  <menu
                    class="tm-part-menu"
                  />
                </div>
              </header>
              <main
                class="tm-part-main"
              >
                <div
                  class="tm-form-group"
                >
                  <!---->
                  <label
                    class="tm-form-group__label"
                    for="send-denomination"
                  >
                    Denomination
                  </label>
                  <div
                    class="tm-form-group__field"
                  >
                    <div
                      class="tm-select"
                      id="send-denomination"
                    >
                      <select
                        class="tm-field tm-field-select"
                      >
                        <option
                          disabled="disabled"
                          hidden="hidden"
                          selected="selected"
                          value=""
                        >
                          Select token...
                        </option>
                        <option
                          value="mycoin"
                        >
                          MYCOIN
                        </option>
                        <option
                          value="fermion"
                        >
                          FERMION
                        </option>
                      </select>
                      <div
                        class="tm-field-select-addon"
                      >
                        <i
                          class="material-icons"
                        >
                          arrow_drop_down
                        </i>
                      </div>
                    </div>
                    <!---->
                  </div>
                </div>
              </main>
            </div>
          </section>
          <section
            class="tm-part"
          >
            <div
              class="tm-part-container"
            >
              <header
                class="tm-part-header"
              >
                <div
                  class="tm-part-header-container"
                >
                  <div
                    class="tm-part-title h5"
                  >
                    Transaction Details
                  </div>
                  <menu
                    class="tm-part-menu"
                  />
                </div>
              </header>
              <main
                class="tm-part-main"
              >
                <div
                  class="tm-form-group"
                >
                  <!---->
                  <label
                    class="tm-form-group__label"
                    for="send-zone-id"
                  >
                    Zone ID
                  </label>
                  <div
                    class="tm-form-group__field"
                  >
                    <div
                      class="tm-select"
                      id="send-zone-id"
                    >
                      <select
                        class="tm-field tm-field-select"
                      >
                        <option
                          disabled="disabled"
                          hidden="hidden"
                          selected="selected"
                          value=""
                        >
                          Select zone...
                        </option>
                        <option
                          value="basecoind-demo1"
                        >
                          basecoind-demo1
                        </option>
                        <option
                          value="basecoind-demo2"
                        >
                          basecoind-demo2
                        </option>
                      </select>
                      <div
                        class="tm-field-select-addon"
                      >
                        <i
                          class="material-icons"
                        >
                          arrow_drop_down
                        </i>
                      </div>
                    </div>
                    <!---->
                  </div>
                </div>
                <div
                  class="tm-form-group"
                >
                  <!---->
                  <label
                    class="tm-form-group__label"
                    for="send-address"
                  >
                    Send To
                  </label>
                  <div
                    class="tm-form-group__field"
                  >
                    <div
                      class="tm-field-group"
                    >
                      <input
                        class="tm-field"
                        id="send-address"
                        placeholder="Address"
                        type="text"
                      />
                    </div>
                    <!---->
                  </div>
                </div>
                <div
                  class="tm-form-group"
                >
                  <!---->
                  <label
                    class="tm-form-group__label"
                    for="send-amount"
                  >
                    Amount
                  </label>
                  <div
                    class="tm-form-group__field"
                  >
                    <div
                      class="tm-field-group"
                    >
                      <input
                        class="tm-field"
                        id="send-amount"
                        placeholder="Amount"
                        type="number"
                      />
                    </div>
                    <!---->
                    <!---->
                  </div>
                </div>
              </main>
            </div>
          </section>
        </main>
        <footer
          class="tm-form-footer"
        >
          <div>
            <div />
            <button
              class="tm-btn"
            >
              <span
                class="tm-btn__container tm-btn--primary"
              >
                <!---->
                <!---->
                <span
                  class="tm-btn__value"
                >
                  Send Tokens
                </span>
              </span>
            </button>
          </div>
        </footer>
      </div>
    </form>
    <div
      class="tm-modal-send-confirmation tm-modal"
    >
      <div
        class="tm-modal-container"
      >
        <header
          class="tm-modal-header"
        >
          <!---->
          <div
            class="tm-modal-title"
          >
            <div>
              Confirm Your Transaction
            </div>
          </div>
          <div
            class="tm-modal-icon tm-modal-close"
          >
            <i
              class="material-icons"
            >
              close
            </i>
          </div>
        </header>
        <main
          class="tm-modal-main"
        >
          <div
            class="tm-li"
          >
            <div
              class="tm-li-container"
            >
              <div
                class="tm-li-thumb"
              >
                <!---->
              </div>
              <div
                class="tm-li-dl"
              >
                <div
                  class="tm-li-dt"
                >
                  Amount
                </div>
                <div
                  class="tm-li-dd"
                >
                  2 mycoin
                </div>
              </div>
            </div>
          </div>
          <div
            class="tm-li"
          >
            <div
              class="tm-li-container"
            >
              <div
                class="tm-li-thumb"
              >
                <!---->
              </div>
              <div
                class="tm-li-dl"
              >
                <div
                  class="tm-li-dt"
                >
                  Recipient
                </div>
                <div
                  class="tm-li-dd"
                >
                  tb1mjt6dcdru8lgdz64h2fu0lrzvd5zv8sfcvkv2l
                </div>
              </div>
            </div>
          </div>
          <p />
          <p>
            Are you sure you want to send this transaction? Make sure to check the address again. This transaction cannot be undone.
          </p>
          <div
            class="tm-modal-send-confirmation__footer"
          >
            <button
              class="tm-btn"
              id="send-confirmation-btn"
              type="button"
            >
              <span
                class="tm-btn__container tm-btn--primary"
              >
                <i
                  aria-hidden="true"
                  class="tm-btn__icon material-icons"
                >
                  send
                </i>
                <!---->
                <span
                  class="tm-btn__value"
                >
                  Approve Send
                </span>
              </span>
            </button>
            <button
              class="tm-btn"
              id="send-cancel-btn"
              type="button"
            >
              <span
                class="tm-btn__container"
              >
                <i
                  aria-hidden="true"
                  class="tm-btn__icon material-icons"
                >
                  cancel
                </i>
                <!---->
                <span
                  class="tm-btn__value"
                >
                  Cancel Send
                </span>
              </span>
            </button>
          </div>
        </main>
        <footer
          class="tm-modal-footer"
        />
      </div>
    </div>
  </main>
</div>
`;

exports[`PageSend should work without providing a default denom 1`] = `
<div
  class="tm-page"
>
  <header
    class="tm-page-header"
  >
    <div
      class="tm-page-header-container"
    >
      <div
        class="tm-page-header-text"
      >
        <div
          class="tm-page-header-title"
        >
          <h2>
            Send
          </h2>
        </div>
        <div
          class="tm-page-header-subtitle"
        >
          <h3>
            
          </h3>
        </div>
      </div>
      <menu
        class="tm-page-header-menu"
      >
        <div>
          <div>
            <div
              class="tm-tool-bar"
            >
              <div
                class="tm-tool-bar-container"
              >
                <div
                  class="main"
                >
                  <a
                    class="back"
                  >
                    <i
                      class="material-icons"
                    >
                      arrow_back
                    </i>
                  </a>
                  <a
                    class="help"
                  >
                    <i
                      class="material-icons"
                    >
                      help_outline
                    </i>
                  </a>
                  <a
                    class="sign-out"
                  >
                    <i
                      class="material-icons"
                    >
                      exit_to_app
                    </i>
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
      </menu>
    </div>
  </header>
  <main
    class="tm-page-main"
  >
    <form
      class="tm-form"
    >
      <div
        class="tm-form-container"
      >
        <!---->
        <main
          class="tm-form-main"
        >
          <section
            class="tm-part"
          >
            <div
              class="tm-part-container"
            >
              <header
                class="tm-part-header"
              >
                <div
                  class="tm-part-header-container"
                >
                  <div
                    class="tm-part-title h5"
                  >
                    Denomination Options
                  </div>
                  <menu
                    class="tm-part-menu"
                  />
                </div>
              </header>
              <main
                class="tm-part-main"
              >
                <div
                  class="tm-form-group"
                >
                  <!---->
                  <label
                    class="tm-form-group__label"
                    for="send-denomination"
                  >
                    Denomination
                  </label>
                  <div
                    class="tm-form-group__field"
                  >
                    <div
                      class="tm-select"
                      id="send-denomination"
                    >
                      <select
                        class="tm-field tm-field-select"
                      >
                        <option
                          disabled="disabled"
                          hidden="hidden"
                          selected="selected"
                          value=""
                        >
                          Select token...
                        </option>
                      </select>
                      <div
                        class="tm-field-select-addon"
                      >
                        <i
                          class="material-icons"
                        >
                          arrow_drop_down
                        </i>
                      </div>
                    </div>
                    <div
                      class="tm-form-msg sm tm-form-msg--error"
                    >
                      Denomination is required
                    </div>
                  </div>
                </div>
              </main>
            </div>
          </section>
          <section
            class="tm-part"
          >
            <div
              class="tm-part-container"
            >
              <header
                class="tm-part-header"
              >
                <div
                  class="tm-part-header-container"
                >
                  <div
                    class="tm-part-title h5"
                  >
                    Transaction Details
                  </div>
                  <menu
                    class="tm-part-menu"
                  />
                </div>
              </header>
              <main
                class="tm-part-main"
              >
                <div
                  class="tm-form-group"
                >
                  <!---->
                  <label
                    class="tm-form-group__label"
                    for="send-zone-id"
                  >
                    Zone ID
                  </label>
                  <div
                    class="tm-form-group__field"
                  >
                    <div
                      class="tm-select"
                      id="send-zone-id"
                    >
                      <select
                        class="tm-field tm-field-select"
                      >
                        <option
                          disabled="disabled"
                          hidden="hidden"
                          selected="selected"
                          value=""
                        >
                          Select zone...
                        </option>
                        <option
                          value="basecoind-demo1"
                        >
                          basecoind-demo1
                        </option>
                        <option
                          value="basecoind-demo2"
                        >
                          basecoind-demo2
                        </option>
                      </select>
                      <div
                        class="tm-field-select-addon"
                      >
                        <i
                          class="material-icons"
                        >
                          arrow_drop_down
                        </i>
                      </div>
                    </div>
                    <!---->
                  </div>
                </div>
                <div
                  class="tm-form-group"
                >
                  <!---->
                  <label
                    class="tm-form-group__label"
                    for="send-address"
                  >
                    Send To
                  </label>
                  <div
                    class="tm-form-group__field"
                  >
                    <div
                      class="tm-field-group"
                    >
                      <input
                        class="tm-field"
                        id="send-address"
                        placeholder="Address"
                        type="text"
                      />
                    </div>
                    <div
                      class="tm-form-msg sm tm-form-msg--error"
                    >
                      Address is required
                    </div>
                  </div>
                </div>
                <div
                  class="tm-form-group"
                >
                  <!---->
                  <label
                    class="tm-form-group__label"
                    for="send-amount"
                  >
                    Amount
                  </label>
                  <div
                    class="tm-form-group__field"
                  >
                    <div
                      class="tm-field-group"
                    >
                      <input
                        class="tm-field"
                        id="send-amount"
                        placeholder="Amount"
                        type="number"
                      />
                    </div>
                    <div
                      class="tm-form-msg sm tm-form-msg--error"
                    >
                      Amount is required
                    </div>
                    <!---->
                  </div>
                </div>
                <!---->
                <!---->
              </main>
            </div>
          </section>
        </main>
        <footer
          class="tm-form-footer"
        >
          <div>
            <div />
            <button
              class="tm-btn"
            >
              <span
                class="tm-btn__container tm-btn--primary"
              >
                <!---->
                <!---->
                <span
                  class="tm-btn__value"
                >
                  Send Tokens
                </span>
              </span>
            </button>
          </div>
        </footer>
      </div>
    </form>
    <!---->
  </main>
</div>
`;
